force-app/main/default/objects/Quality_Indicator_Details__c/fields/QI_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>QI_Summary_Id__c</fullName>
    <description>Master detail relation to Quality Indicator Summary.</description>
    <label>QI Parent Id</label>
    <referenceTo>Quality_Indicator_Summary__c</referenceTo>
    <relationshipLabel>Quality Indicator Details (QI Parent Id)</relationshipLabel>
    <relationshipName>Quality_Indicators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>