force-app/main/default/objects/Quality_Indicator_Details__c/fields/QIUpdatedbySiebel__c.field-meta.xml
<CustomField>
    <fullName>QIUpdatedbySiebel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mule to set it to True for all updated except when the QI detail is updated for previous inactive quarter</description>
    <label>QIUpdatedbySiebel</label>
    <type>Checkbox</type>
</CustomField>