force-app/main/default/objects/Quality_Indicator_Details__c/fields/quality_indicator_ext_id__c.field-meta.xml
<CustomField>
    <fullName>quality_indicator_ext_id__c</fullName>
    <externalId>true</externalId>
    <label>Quality Indicator External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>