force-app/main/default/objects/Quality_Indicator_Details__c/fields/SERVICE_ID__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ID__c</fullName>
    <formula>QI_Summary_Id__r.SERVICE_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Service Id</label>
    <type>Text</type>
</CustomField>