force-app/main/default/objects/Quality_Indicator_Details__c/fields/TestError__c.field-meta.xml
<CustomField>
    <fullName>TestError__c</fullName>
    <label>TestError</label>
    <length>255</length>
    <type>Text</type>
</CustomField>