force-app/main/default/objects/Quality_Indicator_Details__c/fields/Unplanned_Consecutive_Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Consecutive_Weight_Loss__c</fullName>
    <description>Number of care recipients who experienced consecutive unplanned weight loss of any amount when comparing their previous, starting, middle and finishing weights.</description>
    <inlineHelpText>Number of care recipients who experienced consecutive unplanned weight loss of any amount when comparing their previous, starting, middle and finishing weights.</inlineHelpText>
    <label>No. Care Recipients consecutive UWL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>