force-app/main/default/objects/Quality_Indicator_Details__c/fields/Version_No__c.field-meta.xml
<CustomField>
    <fullName>Version_No__c</fullName>
    <label>Version No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>