force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Activities_of_daily_living_ADLs.recordType-meta.xml
<RecordType>
    <fullName>Activities_of_daily_living_ADLs</fullName>
    <active>true</active>
    <label>Activities of Daily Living (ADLs)</label>
</RecordType>