force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Continence.recordType-meta.xml
<RecordType>
    <fullName>Continence</fullName>
    <active>true</active>
    <label>Incontinence Care</label>
</RecordType>