force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Falls_and_Major_Injury.recordType-meta.xml
<RecordType>
    <fullName>Falls_and_Major_Injury</fullName>
    <active>true</active>
    <label>Falls and Major Injury</label>
</RecordType>