force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Hospitalisation.recordType-meta.xml
<RecordType>
    <fullName>Hospitalisation</fullName>
    <active>true</active>
    <label>Hospitalisation</label>
</RecordType>