force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Pressure_Injuries.recordType-meta.xml
<RecordType>
    <fullName>Pressure_Injuries</fullName>
    <active>true</active>
    <label>Pressure Injuries</label>
</RecordType>