force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Set_up_QI_Targets.recordType-meta.xml
<RecordType>
    <fullName>Set_up_QI_Targets</fullName>
    <active>false</active>
    <label>Set up QI Targets</label>
</RecordType>