force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Unplanned_Weight_Lost.recordType-meta.xml
<RecordType>
    <fullName>Unplanned_Weight_Lost</fullName>
    <active>false</active>
    <label>Unplanned Weight Lost</label>
</RecordType>