force-app/main/default/objects/Quality_Indicator_Details__c/recordTypes/Workforce.recordType-meta.xml
<RecordType>
    <fullName>Workforce</fullName>
    <active>true</active>
    <label>Workforce</label>
</RecordType>