force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/ActivitiesOfDailyLivingDeclineTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivitiesOfDailyLivingDeclineTotal</fullName>
    <active>true</active>
    <description>Number of care recipients who experienced a decline in their ADL assessment total score should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_MBI_declined__c, 0) &gt; BLANKVALUE(No_CR_Assessed__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_MBI_declined__c</errorDisplayField>
    <errorMessage>Number of care recipients who experienced a decline in ADL assessment total score of one or more points cannot exceed the number of care recipients assessed for ADL function.</errorMessage>
</ValidationRule>