force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/ActivitiesOfDailyLivingZeroTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivitiesOfDailyLivingZeroTotal</fullName>
    <active>true</active>
    <description>Number of care recipients with an ADL assessment total score of zero should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_MBI_Score__c, 0) &gt; BLANKVALUE(No_CR_Assessed__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_MBI_Score__c</errorDisplayField>
    <errorMessage>Number of care recipients with an ADL assessment total score of zero in the previous quarter cannot exceed number of care recipients assessed for ADL function.</errorMessage>
</ValidationRule>