force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/AntipsychoticReviewedTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>AntipsychoticReviewedTotal</fullName>
    <active>true</active>
    <description>Number of care recipients who received an antipsychotic medication based on a review should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_rec_antipsychotic__c, 0) &gt; BLANKVALUE(No_CR_Assessed2__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_rec_antipsychotic__c</errorDisplayField>
    <errorMessage>Number cannot be higher than the total number of care recipients assessed for antipsychotics.</errorMessage>
</ValidationRule>