force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/CollectionDateOutsideReportingPeriod.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionDateOutsideReportingPeriod</fullName>
    <active>true</active>
    <description>Collection date should be within the date range of the reporting period</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    OR(
        Date_Of_Collection__c &lt; QI_Summary_Id__r.REPORTING_PERIOD__r.Start_Date__c,
        Date_Of_Collection__c &gt; QI_Summary_Id__r.REPORTING_PERIOD__r.End_Date__c
    )
)</errorConditionFormula>
    <errorDisplayField>Date_Of_Collection__c</errorDisplayField>
    <errorMessage>Date falls outside of reporting period.</errorMessage>
</ValidationRule>