force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/ConsecutiveWeightLossTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>ConsecutiveWeightLossTotal</fullName>
    <active>true</active>
    <description>Number of care recipients with consecutive unplanned weight loss should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(Unplanned_Consecutive_Weight_Loss__c, 0) &gt; BLANKVALUE(No_CR_Assessed2__c, 0)
)</errorConditionFormula>
    <errorDisplayField>Unplanned_Consecutive_Weight_Loss__c</errorDisplayField>
    <errorMessage>Number cannot be higher than the total number of care recipients assessed.</errorMessage>
</ValidationRule>