force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/FallWithMajorInjuryTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>FallWithMajorInjuryTotal</fullName>
    <active>true</active>
    <description>Number of care recipients with one or more falls resulting in major injury should not be greater than number of care recipients with one or more falls.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_Exp_FallWith_Injury__c, 0) &gt; BLANKVALUE(No_CR_Exp_Fall__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_Exp_FallWith_Injury__c</errorDisplayField>
    <errorMessage>Number cannot be higher than the total number of care recipients who experienced one or more falls at the service.</errorMessage>
</ValidationRule>