force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/HospitalAdmissionTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>HospitalAdmissionTotal</fullName>
    <active>true</active>
    <description>Number of care recipients with one or more emergency department presentations or hospital admissions should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_hospitalisation_emerg_assessment__c, 0) &gt; BLANKVALUE(No_CR_Assessed__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_hospitalisation_emerg_assessment__c</errorDisplayField>
    <errorMessage>Number of care recipients who had one or more emergency department presentations or hospital presentations cannot exceed the number of care recipients assessed.</errorMessage>
</ValidationRule>