force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/IAD2BTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>IAD2BTotal</fullName>
    <active>true</active>
    <description>Number of care recipients with incontinence who experienced IAD 2B should not be greater than number of care recipients with incontinence who experienced IAD.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_IAD_Skin_loss_with_infection__c, 0) &gt; BLANKVALUE(No_Care_Recipients_experienced_IAD__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_IAD_Skin_loss_with_infection__c</errorDisplayField>
    <errorMessage>Total number of care recipients with skin loss with clinical signs of infection cannot exceed the total number of care recipients with incontinence who experienced IAD.</errorMessage>
</ValidationRule>