force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/PhysicalRestraintSecureTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>PhysicalRestraintSecureTotal</fullName>
    <active>true</active>
    <description>Number of care recipients physically restrained in secure areas should not be greater than number of care recipients physically restrained on any occasion.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_Physical_Restrained_SecureArea_3D__c, 0) &gt; BLANKVALUE(No_CR_Physical_Restrained_3Day__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_Physical_Restrained_SecureArea_3D__c</errorDisplayField>
    <errorMessage>Number cannot be higher than your total number of care recipients physically restrained.</errorMessage>
</ValidationRule>