force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/PolypharmacyTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>PolypharmacyTotal</fullName>
    <active>true</active>
    <description>Number of care recipients prescribed nine or more medications should not be greater than number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_Presc_Med__c, 0) &gt; BLANKVALUE(No_CR_Assessed__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_Presc_Med__c</errorDisplayField>
    <errorMessage>Number cannot be higher than the total number of care recipients assessed.</errorMessage>
</ValidationRule>