force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/PressureInjuryOutsideTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>PressureInjuryOutsideTotal</fullName>
    <active>true</active>
    <description>Validate the number of care recipients with pressure injuries acquired outside of the service is not greater than the number of care recipients with pressure injuries.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_PI_AcqOutside__c, 0) &gt; BLANKVALUE(No_CR_One_More_PI__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_PI_AcqOutside__c</errorDisplayField>
    <errorMessage>Number of care recipients with one or more pressure injuries acquired outside of the service, must be less than total number of care recipients with one or more pressure injuries.</errorMessage>
</ValidationRule>