force-app/main/default/objects/Quality_Indicator_Details__c/validationRules/PressureInjuryTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>PressureInjuryTotal</fullName>
    <active>true</active>
    <description>Validate the number of care recipients with pressure injuries is not greater than the number of care recipients assessed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    BLANKVALUE(No_CR_One_More_PI__c, 0) &gt; BLANKVALUE(No_CR_Assessed__c, 0)
)</errorConditionFormula>
    <errorDisplayField>No_CR_One_More_PI__c</errorDisplayField>
    <errorMessage>Number of care recipients with pressure injuries cannot be higher than the total number of care recipients assessed.</errorMessage>
</ValidationRule>